# colorlog

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  meson.build  meson_options.txt
CMake/: CMakeLists.txt
data/: _colorlog  color.conf  color.zsh  colorlog.1  colorlog.conf
src/: CLHandler.cc  CLHandler.hh  CMakeLists.txt  Config.cc  Config.hh  PipedChild.cc  PipedChild.hh  RuleBox.cc  RuleBox.hh  Rules.cc  Rules.hh  colorCAPI.cc  colorlogCAPI.cc  colorlogCAPI.h  main.cc  meson.build  utils.cc  utils.hh
tests/: CLHandlerUnitTest.cc  CLHanlderUnitTest.cc  CMakeLists.txt  ConfigUnitTest.cc  IntermediateResultUnitTest.cc  RuleBoxUnitTest.cc  RulesUnitTest.cc  meson.build  mocks.hh  regex.hh  testUtils.hh
