add_library(Rules SHARED utils.cc Rules.cc RuleBox.cc)
add_library(Config SHARED Config.cc)
add_library(CLHandler SHARED CLHandler.cc)
add_library(ColorCAPI SHARED SHARED utils.cc colorCAPI.cc)
add_executable(color utils.cc main.cc)
install(TARGETS color DESTINATION bin)
target_link_libraries(color CLHandler Config Rules  ${Boost_LIBRARIES})
target_link_libraries(ColorCAPI CLHandler Config Rules  ${Boost_LIBRARIES})
